# computer-vision-portfolio

./: .gitignore  pyproject.toml
classification/resnet18_cifar10/: README.md  dataset.py  modules.py  test.py  train.py  utils.py
common/: checkpoint.py  reproducibility.py
