[project]
name = "computer-vision-portfolio"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy (>=1.26,<2.4)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "torch (==2.7.0)",
    "torchvision (==0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
